--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -8,4 +8,12 @@ html, body{
     display: flex;
     justify-items: center;
     align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(243,243,243);
+    font-family: Roboto sans-serif;
+}
+
+a{
+    text-decoration: none;
 }
